--- a/Ejercicio-3/index.html
+++ b/Ejercicio-3/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="./styles/style.css">
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rancho&effect=shadow-multiple">
     <title>Página tributo</title>
 </head>
 <body>
@@ -20,9 +21,41 @@
     <header id="cabecera">
         <div class="contenedor">
             <div class="contenedor-titulo">
-                <h1>¿Qué son los volcanes?</h1>
+                <h1>Los Volcanes</h1>
             </div>
         </div>
     </header>
+    <div class="info">
+        <h1>¿Qué son los volcanes?</h1><br>
+        <p>Un volcán es una abertura en la corteza terrestre, por la que puede emerger el magma o lava, junto a gases, cenizas y otros materiales provenientes de las profundidades de la Tierra.
+             Pueden hallarse en otros planetas y satélites del espacio.
+            Los volcanes son bastante frecuentes en la corteza terrestre, 
+            especialmente en las regiones de intensa actividad sísmica, pudiendo 
+            hallarse en la plataforma continental o en el lecho oceánico.
+             Sus erupciones, que es como se denomina al derrame de magma hirviente hacia el exterior,
+              suelen ser cíclicas y esporádicas, variando en intensidad y potencial destructivo.
+    </p>
+   
+    <p>Se consideran una de las principales fuentes de materiales rocosos en la corteza terrestre. Además, son una de las principales amenazas naturales medioambientales, capaces de producir enormes incendios forestales, de arrojar toneladas de material a la atmósfera (gases y cenizas, sobre todo) y de alterar por lo tanto el balance químico de la biósfera terrestre.
+        Muchas extinciones masivas de la historia geológica terrestre se atribuyen a intensos y/o prolongados episodios de actividad volcánica.
+        Los volcanes son estudiados por los geólogos y tienen una importante correlación con la actividad sísmica terrestre, como terremotos y movimientos tectónicos. Los volcanes toman su nombre del dios griego Hefesto, Vulcano.
+    </p>
+    <img src="images/volcan1.gif">
+</div>
+<div class="carac">
+<h1>Características de los volcanes</h1>  
+<p>Los volcanes pueden tener muchas formas, pero generalmente consisten en una estructura cónica consecuencia de la deposición de materiales tras las sucesivas erupciones. Las mismas pueden alcanzar alturas de incluso 8000 metros sobre el nivel del mar.
+    Los materiales que los constituyen pueden ser diversos, dependiendo del tipo de volcán y de la naturaleza del subsuelo donde se produzcan.</p>
+<p>Por otro lado, poseen un ciclo de vida prolongado y diverso, que consiste en tres etapas:</p>
+<ul>
+    <li><b>Actividad o estado de latencia:</b> Cuando los volcanes pueden entrar en erupción en cualquier momento;</li>
+    <li><b>Inactividad o dormancia:</b>  Cuando los volcanes presentan ciertos signos de actividad, pero no han tenido erupciones en siglos;</li>
+    <li><b>Estado de extinción.</b>  Cuando no han tenido una erupción en 25.000 años o más, aunque no es posible descartar del todo que revivan en un momento determinado</li>
+</ul>
+</div>
+
+<section class="form">
+<h1>¿Como se forman los volcanes?</h1>
+</section>
 </body>
 </html>
